# DroidPerf

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists1.txt  CMakeLists_backup.txt  CrossCompile.cmake  LICENSE  README.md  build.gradle  build.sh  cross.sh  fetch.sh  pre.sh
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/dodola/jvmti/: Main2Activity.java  MainActivity.java
drcctprof-databuilder-master/: android-converter.py
drcctprof-databuilder-master/Documents/: alloc-thread-1788.run  method-thread-1788.run  method-thread-1790.run  trace-thread-1790.run
drcctprof-databuilder-master/data/: method-thread-16827.run
drcctprof-databuilder-master/example_data/: trace-thread-16827.run
gradle/wrapper/: gradle-wrapper.properties
jvmtilib/: CMakeLists.txt  build.gradle
jvmtilib/src/main/cpp/: agent.cpp  agent.h  code_cache.cpp  debug.h  io.cpp  io.h  jvmti.h  new_context.cpp  perf_interface.cpp  profiler.cpp  profiler_support.h  splay.h  stacktraces.cpp  thread_data.h
jvmtilib/src/main/java/com/dodola/jvmtilib/: CmdUtils.java  JVMTIHelper.java
postprocessor/drcctprof-databuilder-master/: .gitignore  hpctoolkit-converter.py
scripts/: fetch.sh  pre.sh
src/: agent.h  argument.cpp  code_cache.h  config.h  context.cpp  context.h  io.h  lock.h  metrics.h  new_context.cpp  new_context.h  perf_interface.cpp  perf_interface.h  perf_mmap.cpp  perf_util.cpp  perf_util.h  profiler.h  safe-sampling.h  stacktraces.h  thread_data.cpp  util.h  watchpoint.h  x86-misc.h  xml.h
src/main/cpp/: agent.h  argument.h  code_cache.h  debug.cpp  io.cpp  io.h  metrics.cpp  old_agent.cpp  perf_mmap.h  profiler_support.cpp  splay.cpp  stacktraces.h  thread_data.h  xml.cpp
src/main/cpp/util/: range.h  splay-tree.h
